# blazor-compared

./: .gitignore  Caddyfile  gzip-src.sh  kill-all.sh  run-all.ps1  run-all.sh
BlazorApp/: BlazorApp.sln  CONCLUSIONS.md  Program.cs
BlazorWasmApp/: BlazorWasmApp.sln
GiraffeApp/: Antiforgery.fs  AntiforgeryViews.fs  Css.fs  CssClasses.fs  GiraffeApp.fsproj  MiddleHtmx.fs  Middleware.fs  Program.fs  Views.fs  Weather.fs  web.config
GiraffeTests/: Css.fs  CssProperties.fs  GiraffeTests.fsproj  Main.fs  css-properties.txt
GoApp/: .gitignore  COMPLAINTS.md  CONCLUSIONS.md  go.mod  go.sum  hello.go  templates.templ  templates_templ.go  weatherservice.go
GoTemplApp/: .gitignore  CONCLUSIONS.md  go.mod  go.sum  hello.go  templates.templ  templates_templ.go  watch.sh
MVCApp/: MVCApp.csproj  Program.cs  eslint.config.cjs  log.txt  package-lock.json  package.json
MVCAppWithLinter/: .eslintrc.js  eslint.config.cjs  package-lock.json  package.json  tsconfig.json
MVCAppWithTypeScript/: .gitignore  HotTypeScript.cs  MVCApp.csproj  MVCApp.sln  Program.cs  README.md  ViteProxy.cs  appsettings.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
NuxtApp/: package-lock.json
RazorApp/: CONCLUSIONS.md  Program.cs  RazorApp.csproj  RazorApp.sln
RustAxum/: Cargo.toml  Makefile  devloop.sh
RustAxum/src/: main.rs
RustAxum/static/css/: BlazorApp.styles.css
RustAxum/templates/: about.html  boosted_layout.html  counter.html  fetchdata.html  forecasts.html  goodday.html  home.html  index.html  layout.html  main_layout.html  nav_menu.html  survey.html
(+124 files in other folders)
